# ElevatorControl

./: .clangd  .gitignore  CmakeLists.txt  README.md  eep.eep
.cache/clangd/index/: Timer.c.45EE48B54BFC3B6D.idx  Timer.h.A7D0A2E35D82B794.idx  Timer_cfg.h.3C438111C20EE2D0.idx  Timer_types.h.956FAE087FC12142.idx  common.h.E1F415556758550F.idx  delay.h.81418E30F99AFFE1.idx  delay_basic.h.D70F608268BA9439.idx  dio.c.16D7C43950B72F49.idx  dio.c.6D2479B0491AB894.idx  dio.h.B857ACAEFFF83819.idx  dio.h.D78355A917F318B9.idx  dio_cfg.h.3583577AF91E7331.idx  dio_types.h.BAF52B2541BFA4F0.idx  fuse.h.78159D9042051818.idx  interrupt.h.A3B920220DFA4A23.idx  inttypes.h.7E694032E2BFC904.idx  io.h.61A29D24D480E60B.idx  iom32.h.4366F9FE976FD707.idx  lock.h.148965C9FFF34CA4.idx  main.c.3B4FBA4025D28CB0.idx  main.c.722ED30BFCF4576C.idx  portpins.h.D0DCEAEDEEDA19E4.idx  sfr_defs.h.B5D1AA658CA5CFBA.idx  std_types.h.0F4EEEA5758A6F05.idx  stdint.h.3AA82EC2BDD99FA1.idx  version.h.EEFB7A5046409944.idx
App/: main.c
App/CallHandler/: CMakeLists.txt
App/CallHandler/includes/: CallHandler_lcfg.h
App/CallHandler/interfaces/: CallHandler.h  CallHandler_gcfg.h
App/CallHandler/src/: CallHandler.c  CallHandler_lcfg.c
App/Diagnostics/: CMakeLists.txt
App/Diagnostics/includes/: Diagnostics_lcfg.h
App/Diagnostics/interfaces/: Diagnostics.h  Diagnostics_gcfg.h
App/Diagnostics/src/: Diagnostics.c
App/ElevatorController/: CMakeLists.txt
App/ElevatorController/includes/: ElevatorController_lcfg.h
App/ElevatorController/interfaces/: ElevatorController.h  ElevatorController_gcfg.h  SystemConfig.h
App/ElevatorController/src/: ElevatorController.c
App/LEDController/: CMakeLists.txt
App/LEDController/includes/: LEDController_lcfg.h
App/LEDController/interfaces/: LEDController.h  LEDController_gcfg.h
App/LEDController/src/: LEDController.c  LEDController_lcfg.c
App/Menu/: CMakeLists.txt
App/Menu/includes/: Menu_lcfg.h
App/Menu/interfaces/: Menu.h  Menu_gcfg.h
App/Menu/src/: Menu.c
App/ModeManager/: CMakeLists.txt
App/ModeManager/includes/: ModeManager_lcfg.h
App/ModeManager/interfaces/: ModeManager.h  ModeManager_gcfg.h
App/ModeManager/src/: ModeManager.c
App/MotionController/: CMakeLists.txt
App/MotionController/includes/: MotionController_lcfg.h
App/MotionController/interfaces/: MotionController.h  MotionController_gcfg.h
App/MotionController/src/: MotionController.c
Common/: SystemConfig.h  helperFunc.c  helperFunc.h  std_types.h
HAL/ButtonDriver/: CMakeLists.txt
HAL/ButtonDriver/includes/: ButtonDriver_lcfg.h
HAL/ButtonDriver/interfaces/: ButtonDriver.h  ButtonDriver_gcfg.h
HAL/ButtonDriver/src/: ButtonDriver.c  ButtonDriver_lcfg.c
HAL/Display/: CMakeLists.txt  LCD_DRIVER_README.md
HAL/Display/includes/: char_lcd_lcfg.h
HAL/Display/interfaces/: char_lcd.h  char_lcd_gcfg.h  lcd_config.h
HAL/Display/src/: char_lcd.c
HAL/I2C_LCD/: CMakeLists.txt
HAL/I2C_LCD/interfaces/: i2c_lcd.h
HAL/I2C_LCD/src/: i2c_lcd.c
HAL/RelayManager/: CMakeLists.txt
HAL/RelayManager/includes/: RelayManager_lcfg.h
HAL/RelayManager/interfaces/: RelayManager.h  RelayManager_gcfg.h
HAL/RelayManager/src/: RelayManager.c  RelayManager_lcfg.c
HAL/SegmentDriver/: CMakeLists.txt
HAL/SegmentDriver/includes/: SegmentDriver_lcfg.h
HAL/SegmentDriver/interfaces/: SegmentDriver.h  SegmentDriver_gcfg.h
HAL/SegmentDriver/src/: SegmentDriver.c  SegmentDriver_lcfg.c
HAL/SensorManager/: CMakeLists.txt
HAL/SensorManager/includes/: SensorManager_lcfg.h
HAL/SensorManager/interfaces/: SensorManager.h  SensorManager_gcfg.h
HAL/SensorManager/src/: SensorManager.c
HAL/SoftI2C/: CMakeLists.txt
HAL/SoftI2C/interfaces/: soft_i2c.h
HAL/SoftI2C/src/: soft_i2c.c
MCAL/Dio/: CMakeLists.txt
MCAL/Dio/include/: dio.h  dio_types.h
MCAL/Dio/includes/: dio_cfg.h
MCAL/Dio/interfaces/: dio_types.h
MCAL/Dio/src/: dio.c
MCAL/EepD/: CMakeLists.txt
MCAL/EepD/includes/: EepD_lcfg.h
MCAL/EepD/interfaces/: EepD.h  EepD_gcfg.h
MCAL/EepD/src/: EepD.c
MCAL/Timer/: CMakeLists.txt
MCAL/Timer/cfg/: Timer_cfg.h
MCAL/Timer/include/: Timer.h  Timer_types.h
MCAL/Timer/includes/: Timer_cfg.h
MCAL/Timer/interfaces/: Timer.h  Timer_types.h
MCAL/Timer/src/: Timer.c
